--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,8 +7,8 @@
 
 header{
     width: 100%;
-    height: 40px;
-    padding: 0px 5px;
+    height: auto;
+    padding: 10px 100px;
     color: #fff;
     display: flex;
     align-items: center;
@@ -24,21 +24,23 @@ header h2{
 /* Banner Section Start */
 .banner{
     width: 100%;
-    height: 600px;
+    height: auto;
     color: #fff;
     display: flex;
-    padding: 0px 100px;
+    padding: 10px 100px;
   align-items: center;
     justify-content: space-between;
-  background:url(../img/banner\ .jpg)no-repeat;
+ 
+    background: linear-gradient(rgb(0,0,0,0.5),rgb(0,0,0,0.5)),url(../img/banner\ .jpg);
   background-size: cover;
 }
 .banner h1{
-font-size: 55px;
+font-size: 50px;
+padding:0px 20px;
 font-weight: normal;
 }
 .banner h1 span{
-    font-size: 75px;
+    font-size: 70px;
     font-weight:600 ;
     display: block;
 }
@@ -69,11 +71,12 @@ font-weight: normal;
 /* Feature Section Start */
 .feature{
     width: 100%;
-    height: auto;
+    height: 60%px;
     color: #022D7C;
     display: flex;
     justify-content: space-between;
-    padding: 10px 100px;
+    margin-top: 15px;
+    padding: 0px 100px;
     text-align: center;
 }
 .feature div{
@@ -91,7 +94,8 @@ margin-top: 5px;
 }
 .feature div h2{
     text-align:left;
-    font-size: 30px;
+    font-size: 25px;
+    font-weight: 800;
 
 }
 /* Feature Section End */
@@ -104,7 +108,11 @@ margin-top: 5px;
     background: #022D7C;
     text-align: center;
     padding: 50px 120px;
-    margin-top: -100px;
+}
+.about h2{
+    font-size: 30px;
+    font-weight: 550;
+   
 }
 .about button{
     width: 250px;
@@ -113,11 +121,6 @@ margin-top: 5px;
     background: none;
     color: #fff;
     border-color: #fff;
-}
-.about h2{
-    font-size: 30px;
-    font-weight: 550;
-    padding: 0px 10px;
 }
 /* About us Section End */
 
@@ -136,9 +139,15 @@ margin-top: 5px;
 .service .image{
     width: 50%;
 }
+.upper .content{
+    padding-left:60px;
+}
+.lower .content{
+    padding-right: 60px;
+}
 .service .image img{
     width:530px;
-    height: 450px;
+    height: 420px;
 }
 .service .content h3{
     font-size: 30px;
@@ -152,7 +161,7 @@ footer{
     width: 100%;
     height:auto;
     text-align: center;
-    padding:15px 100px;
+    padding:10px 100px;
     background: #022D7C;
     color: #fff;
 }
@@ -163,3 +172,211 @@ footer h4 span{
     font-size: 18px;
 }
 /* /Footer Section End */
+
+/* Media Query Section Start */
+@media screen and (max-width:1200px){
+    .upper .content{
+       margin-left: 0px;
+        padding-left:150px;
+        font-size: 20px;
+     
+    }
+}
+@media screen and (max-width:991px){
+   .banner{
+    width: 100%;
+    height: auto;
+    padding: 10px 0px;
+   }
+   .feature div h2{
+    text-align:left;
+    font-size: 18px;
+    font-weight: 600;
+}
+.service{
+        padding:0px 0px;
+    }
+    .service .content,
+    .service .image{
+    width: 100%;
+}
+    .service .upper,.service .lower{
+    flex-direction: column;
+    align-items: right;
+    }
+    .upper .content,
+    .lower .content{
+        text-align: center;
+        padding: 5px;
+    } 
+    .service .content h3{
+        font-size: 20px;
+    } 
+     .service .content p{
+        font-size: 18px;
+    }
+    .service .image img{
+        width:100%;
+        height: 400px;
+    }
+    footer h4{
+        font-size: 18px;
+    }
+}
+@media screen and (max-width:768px){
+    header{
+        padding: 5px 100px;
+     }
+    header h2{
+      
+        font-weight:normal;
+        font-size: 20px;
+    }
+    header h2 span{
+        display: block;
+    }
+.banner{
+   flex-direction: column;
+}
+.banner h1{
+    font-size: 35px;
+    padding:20px 0px;
+    font-weight: normal;
+    text-align: center;
+    }
+    .banner h1 span{
+        font-size: 40px;
+        font-weight:700 ;
+        display: block;
+    }
+.feature{
+    flex-direction: column;
+    justify-content:center;
+}
+.feature div{
+    width: 100%;
+    margin-bottom:0px;
+}
+.feature div img{
+    width: 100%;
+    height:250px   
+}
+.feature div h2{
+    text-align:center;
+    font-size: 30px;
+    font-weight: 800;
+    margin-bottom: 20px;
+}
+footer h4 span{
+    display: block;    
+}
+}
+@media screen and (max-width:578px){
+    header{
+            padding: 5px 30px;
+         }
+         aside{
+            width: 70%;
+         }
+         .about{
+            padding: 30px 80px;
+         }
+         .about h2{
+            font-size: 30px;
+            font-weight: 600;
+           
+        }
+}
+@media screen and (max-width:425px){
+       header span2{
+        display: none;
+       }
+       header h2{
+        display: flex;
+      padding: 5px 0px;
+       }
+       .service .content p{
+        font-size: 15px;
+       }
+       footer h4 span{
+        font-size: 15px;
+       }  
+       footer h4{
+        font-size: 18px;
+       }  .about h2{
+        font-size: 18px;
+       }
+       .about{
+        padding: 20px 50px;
+       }
+       .about p{
+        font-size: 15px;
+       }
+       .about button{
+        width: 180px;
+        height: 20px;
+        margin-top: 10px;  
+    }
+       .feature{
+        height: 100%;
+       }
+       .feature div img{
+        width: 70%;
+        height:180px   
+    }
+    .feature div h2{
+        text-align:center;
+        font-size: 20px;
+        font-weight: 800;
+        margin-bottom: 10px;
+    }
+    .feature p{
+        font-size: 15px;
+        text-align: justify;
+        margin-top: 5px;
+        }
+}
+@media screen and (max-width:320px){
+    header{
+        padding: 0px 0px;
+    }
+    .banner h1{
+        font-size: 18px;
+        padding: 10px 80px;
+    } 
+       .banner h1 span{
+        font-size: 20px;
+        padding: 10px 80px;
+    }
+    .banner aside{
+        width: 70%;
+        height: auto;
+    }  
+      .banner aside form table{
+     height: 10%;
+    }
+    .banner aside input[type],
+    .banner aside textarea,
+    .banner aside button{
+         
+        width: 100%;
+        margin:5px;
+        height: 25px;
+        
+        text-align: center;
+       
+    }
+    .banner aside button{
+        size: 50px;
+     
+    }
+    .feature div img{
+        width: 80%;
+        height:120px   
+    }
+    footer h4 span{
+        font-weight: 200;
+        font-size: 14px;
+    }
+}
+/* Media Query Section End */
